@@ -1,1 +1,13 @@
 # gwt-maven-demo-app
+
+
+### gwt-maven-plugin
+- https://github.com/tbroyer/gwt-maven-plugin
+- https://tbroyer.github.io/gwt-maven-plugin/usage.html
+
+### debug configurations for tomcat 9
+
+```
+-Dcatalina.base="C:\Workspace\mvntest\webapp\.metadata\.plugins\org.eclipse.wst.server.core\tmp0" -Dcatalina.home="C:\Program Files\Apache Software Foundation\apache-tomcat-9.0.71" -Dwtp.deploy="C:\Workspace\mvntest\webapp\.metadata\.plugins\org.eclipse.wst.server.core\tmp0\wtpwebapps" --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED
+```
+<img src="https://user-images.githubusercontent.com/537319/215140012-8f29aafa-b456-4ef4-aceb-3bbd948a7ac0.png" alt="drawing" width="500"/>
